--- a/src/main/resources/nginx-1.18.0/html/hmdp/css/login.css
+++ b/src/main/resources/nginx-1.18.0/html/hmdp/css/login.css
@@ -61,3 +61,58 @@ input[type="radio"]:checked + label::before {
 input[type="radio"] {
     opacity: 0;
 }
+
+
+.radio-container {
+    display: inline-block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 16px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.radio-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.radio-container label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+}
+
+.radio-container input:checked ~ label {
+    background-color: #4CAF50;
+    border-color: #4CAF50;
+}
+
+.radio-container label:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.radio-container input:checked ~ label:after {
+    display: block;
+}
+
+.radio-container label:after {
+    top: 6px;
+    left: 6px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: white;
+}
